# OpenGL-Program-Collection

./: README.md
docs/: start-x11
docs/CONTRIBUTING/: ANDROID.md
program/blue-house/: .clangd  CMakeLists.txt  LICENSE  README.md
program/blue-house/include/: AppClass.hpp  BuffersClass.hpp  ShaderClass.hpp  Utils.hpp
program/blue-house/res/shaders/: fragment_shader.fsh  vertex_shader.vsh
program/blue-house/src/: AppClass.cpp  main.cpp
program/triangle/: .clang-format  .clangd  CMakeLists.txt  README.md
program/triangle/include/: AppClass.hpp  BuffersClass.hpp  ShaderClass.hpp  Utils.hpp  utils.hpp
program/triangle/res/shaders/: fragment_shader.fsh  vertex_shader.vsh
program/triangle/src/: AppClass.cpp  EBOClass.cpp  ShaderClass.cpp  VAOClass.cpp  VBOClass.cpp  glad.c  main.cpp
program/trippy-rectangle/: CMakeLists.txt  LICENSE  README.md
program/trippy-rectangle/include/: AppClass.hpp  BuffersClass.hpp  ShaderClass.hpp  TextureClass.hpp  Utils.hpp
program/trippy-rectangle/include/glad/: glad.h
program/trippy-rectangle/res/shaders/: fragment_shader.fsh  vertex_shader.vsh
program/trippy-rectangle/src/: ShaderClass.cpp  TextureClass.cpp  Utils.cpp  VAOClass.cpp  main.cpp
program/window/: .clang-format  CMakeLists.txt  README.md
program/window/include/: opengl_renderer.hpp  utils.hpp  window.hpp
program/window/src/: main.cpp  opengl_renderer.cpp  window.cpp
